--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,10 @@ dependencies:
   speech_to_text: ^7.3.0
   flutter_tts: ^4.2.3
   pdf: ^3.10.4
-  flutter_markdown: ^0.6.18 
+  flutter_markdown: ^0.7.7+1
+  path_provider: ^2.1.1
+  pdfx: ^2.3.0
+  syncfusion_flutter_pdf: ^31.1.19
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
