--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  permission_handler: ^11.3.1
   google_generative_ai: ^0.4.3
   shared_preferences: ^2.2.2
   file_picker: ^10.3.3
