--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,15 @@ dependencies:
   flutter_svg: ^2.0.9
   speech_to_text: ^7.3.0
   flutter_tts: ^4.2.3
+  printing: ^5.14.2
   pdf: ^3.10.4
+  docx_template: ^0.4.0       # for .docx support
+  excel: ^4.0.6      # for .xlsx support
   flutter_markdown: ^0.7.7+1
   path_provider: ^2.1.1
   pdfx: ^2.3.0
   syncfusion_flutter_pdf: ^31.1.19
+  archive: ^3.6.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
